# Advanced-Tic-Tac-Toe

./: .gitignore  AI-LOGIC.cpp  GameLogic.cpp  LOGIC-YARA.cpp  README.md  SRS1.0.doc  Testing Documentation.docx  clickme.txt  clickmeyayara.txt  edit1yara.cpp  edit2yara.cpp  editedlogin.cpp  forViko.txt  formarioom.txt  linked.c++  main.c  main.cpp  main2.cpp  zft.cbp
Basic login using QT/: dialog.cpp  login.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  register.txt  untitled.pro
GameHistoryNoor/: gamehistory.cpp  gamehistory.h  gamehistory.ui
XOGUIQMAKE/: main.cpp  mainwindow.ui
memory_test/: .qmake.stash
test/: CMakeLists.txt  dialog test.cpp  final test.cpp  game history test.cpp  gamelist test.cpp  logic test.cpp  main.cpp  minimax test.cpp  player to player test.cpp  sign in test.cpp  sign up test.cpp  tst_case.cpp
test/tictactoev/: dialog.h  dialog.ui  gamehistory.h  gameslist.cpp  gameslist.ui  gtest_dependency.pri  history.txt  main.cpp  mainwindow.h  register.txt  signin.cpp  signin.h  signin.ui  signin2.cpp  signin2.h  signup.cpp  signup.h  signup.ui  startgame.cpp  startgame.h  startgame.ui  tictactoe.pro  tst_gamehistory.cpp  tst_gamelist.cpp  tst_startgame.cpp  tst_userc.cpp  usermanager.cpp  usermanager.h
test/tictactoev/googletest/googletest/src/: gtest.cc
tictactoev/: Makefile  Makefile.Debug  Makefile.Release  Soundeffects.qrc  Wstartpage.qss  aiLogic.cpp  (+40 more)
tictactoev copy/: Makefile  Makefile.Release  Wstartpage.qss  dialog.ui  main.cpp  register.txt  signin.ui  signin2.ui  signup.cpp  tictactoe.pro  ui_mainwindow.h  ui_signin.h
(+447 files in other folders)
